[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swash_pp"
version = "0.0.1"
authors = [
  { name="Renan Silva", email="renan.silva@research.uwa.edu.au" },
]
description = "Post-processing functions of SWASH"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "xarray",
]
